--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </div>
         <div class="main-content">
-            <section class="home section">
+            <section class="home section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="home-info padd-15">
@@ -36,8 +36,117 @@
                             <p>I` m a designer with extensive expirience for over 5 years. My expertise is to create and website design, graphic design, and many more...</p>
                             <a href="#contact" class="btn hire-me">Hire Me</a>
                         </div>
-                        <div class="home-img">
-                            <img src="images/image.jpeg" alt="">
+                        <div class="home-img padd-15">
+                            <img src="images/image.jpg" alt="">
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="about section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>About Me</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="about-content padd-15">
+                            <div class="row">
+                                <div class="about-text padd-15">
+                                    <h3>I`m Ivan and <span>Web Developer</span></h3>
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis iusto quisquam assumenda harum quidem quis aliquam, incidunt nesciunt a porro hic corporis unde, possimus dolores voluptatibus, doloribus temporibus sequi quam vel aut velit quasi! At et incidunt qui, sapiente libero ex, sint molestias alias voluptatibus temporibus nam est harum repellat rerum mollitia eaque. Odio, pariatur?</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="personal-info padd-15">
+                                    <div class="row">
+                                        <div class="info-item padd-15">
+                                            <p>Birthday : <span>30 nov 1995</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Age : <span>27</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Wibsite : <span>ikaragodin.ru</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Email : <span>karagodini@yandex.ru</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Degree : <span>CS</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Phone : <span>+7 989 273 57 01</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>City : <span>Saint-Peterburg</span></p>
+                                        </div>
+                                        <div class="info-item padd-15">
+                                            <p>Freelnace : <span>Available</span></p>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="buttons padd-15">
+                                            <a href="#" class="btn">Download CV</a>
+                                            <a href="#contact" class="btn hire-me">Hire Me</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="skills padd-15">
+                                    <div class="row">
+                                        <div class="skill-item padd-15">
+                                            <h5>JS</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 86%;"></div>
+                                                <div class="skill-percent">86%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>PHP</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 66%;"></div>
+                                                <div class="skill-percent">66%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>HTML</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 96%;"></div>
+                                                <div class="skill-percent">96%</div>
+                                            </div>
+                                        </div>
+                                        <div class="skill-item padd-15">
+                                            <h5>Bootstrup</h5>
+                                            <div class="progress">
+                                                <div class="progress-in" style="width: 76%;"></div>
+                                                <div class="skill-percent">76%</div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="education padd-15">
+                                    <h3 class="title">Education</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calender"></i>2013 - 2015
+                                                    </h3>
+                                                    <h4 class="timeline-title">Master in Computer Science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non in sequi asperiores vero fugit error architecto, odio minus cum voluptatibus dolores tenetur, ratione harum rerum.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="experience padd-15">
+                                    <h3 class="title">Experience</h3>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
