--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>
                 </div>
             </section>
-            <section class="about section">
+            <section class="about section hidden">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -134,7 +134,23 @@
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class="fa fa-calender"></i>2013 - 2015
+                                                        <i class="fa fa-calendar"></i>2013 - 2015
+                                                    </h3>
+                                                    <h4 class="timeline-title">Master in Computer Science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non in sequi asperiores vero fugit error architecto, odio minus cum voluptatibus dolores tenetur, ratione harum rerum.</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i>2013 - 2015
+                                                    </h3>
+                                                    <h4 class="timeline-title">Master in Computer Science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non in sequi asperiores vero fugit error architecto, odio minus cum voluptatibus dolores tenetur, ratione harum rerum.</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i>2013 - 2015
                                                     </h3>
                                                     <h4 class="timeline-title">Master in Computer Science</h4>
                                                     <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non in sequi asperiores vero fugit error architecto, odio minus cum voluptatibus dolores tenetur, ratione harum rerum.</p>
@@ -145,8 +161,117 @@
                                 </div>
                                 <div class="experience padd-15">
                                     <h3 class="title">Experience</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i>2013 - 2015
+                                                    </h3>
+                                                    <h4 class="timeline-title">Master in Computer Science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non in sequi asperiores vero fugit error architecto, odio minus cum voluptatibus dolores tenetur, ratione harum rerum.</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i>2013 - 2015
+                                                    </h3>
+                                                    <h4 class="timeline-title">Master in Computer Science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non in sequi asperiores vero fugit error architecto, odio minus cum voluptatibus dolores tenetur, ratione harum rerum.</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class="fa fa-calendar"></i>2013 - 2015
+                                                    </h3>
+                                                    <h4 class="timeline-title">Master in Computer Science</h4>
+                                                    <p class="timeline-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non in sequi asperiores vero fugit error architecto, odio minus cum voluptatibus dolores tenetur, ratione harum rerum.</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="service section hidden">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Services</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-mobile-alt"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt hic magnam cumque?</p>
+                            </div>
+                        </div>
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-laptop-code"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt hic magnam cumque?</p>
+                            </div>
+                        </div>
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-palette"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt hic magnam cumque?</p>
+                            </div>
+                        </div>
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-code"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt hic magnam cumque?</p>
+                            </div>
+                        </div>
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-search"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt hic magnam cumque?</p>
+                            </div>
+                        </div>
+                        <div class="service-item padd-15">
+                            <div class="service-item-inner">
+                                <div class="icon">
+                                    <i class="fa fa-bullhorn"></i>
+                                </div>
+                                <h4>Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt hic magnam cumque?</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="portfolio section">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Portfolio</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="portfolio-heading padd-15">
+                            <h2>My Last Projects :</h2>
                         </div>
                     </div>
                 </div>
