--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             <div class="nav-toggler">
                 <span></span>
             </div>
-            <ul class="nav">
-                <li><a href="#home" class="asd active"><i class="fa fa-home"></i> Home</a></li>
-                <li><a href="#about" class="asd"><i class="fa fa-user"></i> About</a></li>
-                <li><a href="#service" class="asd"><i class="fa fa-list"></i> Services</a></li>
-                <li><a href="#portfolio" class="asd"><i class="fa fa-briefcase"></i> Portfolio</a></li>
-                <li><a href="#contact" class="asd"><i class="fa fa-comments"></i> Contact</a></li>
-            </ul>
+            <div class="btnn" id="btnn">
+                <a href="#home" class="asd active"><i class="fa fa-home"></i> Home</a>
+                <a href="#about" class="asd"><i class="fa fa-user"></i> About</a>
+                <a href="#service" class="asd"><i class="fa fa-list"></i> Services</a>
+                <a href="#portfolio" class="asd"><i class="fa fa-briefcase"></i> Portfolio</a>
+                <a href="#contact" class="asd"><i class="fa fa-comments"></i> Contact</a>
+            </div>
         </div>
         <div class="main-content">
             <section class="home section" id="home">
