--- a/index.html
+++ b/index.html
@@ -22,8 +22,15 @@
                 <a href="#"><span>A</span>tlas</a>
             </div>
             <div class="nav-toggler">
-                <span></span>
-                
+                <span class="mob-btn"></span>
+                <div class="mob-nav">
+                    <a href="#home" class="asd"><i class="fa fa-home"></i> Home</a>
+                    <a href="#about" class="asd"><i class="fa fa-user"></i> About</a>
+                    <a href="#service" class="asd"><i class="fa fa-list"></i> Services</a>
+                    <a href="#portfolio" class="asd"><i class="fa fa-briefcase"></i> Portfolio</a>
+                    <a href="#contact" class="asd"><i class="fa fa-comments"></i> Contact</a>
+                </div>
+
             </div>
             <div class="btnn" id="btnn">
                 <a href="#home" class="asd active"><i class="fa fa-home"></i> Home</a>
